resources/app-sre-stage/observatorium-mst-stage/observatorium-mst-api-stage.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/timeout: 5m
  labels:
    app: observatorium-api
  name: observatorium-mst-api
spec:
  host: observatorium-mst.api.stage.openshift.com
  port:
    targetPort: public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: observatorium-observatorium-mst-api
    weight: 100
  wildcardPolicy: None
