resources/app-sre-stage/observatorium-mst-stage/observatorium-mst-thanos-compact.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: observatorium-thanos-compact
  name: observatorium-mst-thanos-compact
spec:
  host: observatorium-mst-thanos-compact.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: observatorium-thanos-compact
    weight: 100
  wildcardPolicy: None
